# Graphlink

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  GRAPHITE_REPO_NAVIGATION.md  GRAPHLINK_REPO_NAVIGATION.md  README.md  SECURITY.md  graphite_app.sln  graphlink_app.sln  graphlink_desktop.py  pyproject.toml  qt_burndown.json  readme.md  requirements.in  requirements.txt
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  frontend-smoke.yml  python-smoke.yml  security.yml
assets/about/: index.html
assets/chat-library/: index.html
assets/command-palette/: index.html
assets/composer/: index.html
assets/composer-context/: index.html
assets/composer-picker/: index.html
assets/document-viewer/: index.html
assets/drag-speed/: index.html
assets/font-control/: index.html
assets/grid-control/: index.html
assets/help/: index.html
assets/minimap/: index.html
assets/notification/: index.html
assets/pin-overlay/: index.html
assets/plugin-picker/: index.html
assets/search-overlay/: index.html
assets/settings/: index.html
assets/token-counter/: index.html
assets/toolbar/: index.html
backend/: __init__.py  about.py  agents.py  app.py  assets.py  canvas.py  chat_library.py  composer.py  events.py  notifications.py  plugins.py  response_parsing.py  settings.py  token_counter.py
backend/tests/: conftest.py  test_about.py  test_agent_layer_qt_free.py  test_agents.py  test_app_ws.py  test_assets.py  test_backend_composer.py  test_canvas.py  test_chat_library.py  test_event_bus.py  test_plugins.py  test_response_parsing.py  test_settings.py  test_ws_origin.py
composer_ui/: index.html  package-lock.json  package.json  vite.config.ts
composer_ui/src/: ComposerApp.tsx  bridge.ts  bridgeTypes.ts  main.tsx  state.ts  styles.css
doc/: ARCHITECTURE_REVIEW_FINDINGS.md  BUG_SWEEP_FIX_LOG.md  BUG_SWEEP_REPORT.md  NODE_RENDERING_UI_QA.md  PLUGIN_SYSTEM_REFACTOR_PLAN.md  PRODUCTION_ROADMAP.md  START_SCREEN_REMOVAL_AUDIT.md  UI_COLOR_REFACTOR_PLAN.md
graphite_app/: api_provider.py  graphite_agents.py  graphite_agents_code_sandbox.py  graphite_agents_core.py  graphite_agents_pycoder.py  graphite_agents_reasoning.py  graphite_agents_tools.py  graphite_agents_web.py  graphite_app.py  graphite_app.pyproj  graphite_app.sln  graphite_canvas_dialogs.py  graphite_canvas_groups.py  graphite_canvas_items.py  graphite_canvas_note_items.py  graphite_command_palette.py  graphite_config.py  graphite_connections.py  graphite_conversation_node.py  graphite_core.py  graphite_dialogs.py  graphite_exporter.py  graphite_file_handler.py  graphite_html_view.py  graphite_library_dialog.py  graphite_licensing.py  graphite_lod.py  graphite_logging.py  graphite_memory.py  graphite_minimap.py  graphite_node.py  graphite_paths.py  graphite_plugin_artifact.py  graphite_plugin_code_sandbox.py  graphite_plugin_gitlink.py  graphite_plugin_graph_diff.py  graphite_plugin_picker.py  graphite_plugin_portal.py  graphite_plugin_quality_gate.py  graphite_plugin_workflow.py  (+16 more)
graphite_app/graphite_app/: api_provider.py  graphite_agents.py  graphite_agents_code_sandbox.py  graphite_agents_core.py  graphite_agents_pycoder.py  graphite_agents_reasoning.py  graphite_agents_tools.py  graphite_agents_web.py  graphite_app.py  graphite_app.pyproj  graphite_audio.py  graphite_canvas_dialogs.py  graphite_canvas_groups.py  graphite_canvas_items.py  graphite_canvas_note_items.py  graphite_command_palette.py  graphite_config.py  graphite_connections.py  graphite_conversation_node.py  graphite_core.py  graphite_dialogs.py  graphite_exporter.py  graphite_file_handler.py  graphite_html_view.py  graphite_library_dialog.py  graphite_licensing.py  graphite_lod.py  graphite_memory.py  graphite_minimap.py  graphite_node.py  graphite_plugin_artifact.py  graphite_plugin_code_review.py  graphite_plugin_code_sandbox.py  graphite_plugin_context_menu.py  graphite_plugin_graph_diff.py  graphite_plugin_picker.py  graphite_plugin_portal.py  graphite_plugin_workflow.py  graphite_prompts.py  graphite_pycoder.py  (+15 more)
graphite_app/graphite_canvas/: __init__.py  graphite_canvas_base.py  graphite_canvas_chart_item.py  graphite_canvas_container.py  graphite_canvas_dialogs.py  graphite_canvas_frame.py  graphite_canvas_navigation_pin.py  graphite_canvas_note.py
graphite_app/graphite_nodes/: __init__.py  graphite_node_chat_menu.py  graphite_node_code.py  graphite_node_code_menu.py  graphite_node_document.py  graphite_node_document_menu.py  graphite_node_image.py  graphite_node_image_menu.py  graphite_node_thinking.py  graphite_node_thinking_menu.py
graphite_app/graphite_plugins/: __init__.py  (+10 more)
graphlink_app/: api_provider.py  graphlink_about_bridge.py  graphlink_about_payload.py  graphlink_about_web.py  graphlink_agents.py  graphlink_agents_artifact.py  graphlink_agents_code_sandbox.py  graphlink_agents_core.py  graphlink_agents_pycoder.py  graphlink_agents_tools.py  graphlink_agents_web.py  graphlink_app.py  graphlink_app.pyproj  graphlink_app_about_payload.py  graphlink_app_chat_library_payload.py  graphlink_app_composer_payload.py  graphlink_app_plugins_payload.py  graphlink_app_settings_payload.py  graphlink_artifact_agent.py  graphlink_canvas_dialogs.py  graphlink_canvas_groups.py  graphlink_canvas_items.py  graphlink_canvas_note_items.py  graphlink_chart_data.py  graphlink_chat_agent.py  graphlink_chat_library_bridge.py  graphlink_chat_library_payload.py  graphlink_chat_library_web.py  graphlink_command_palette.py  graphlink_command_palette_bridge.py  graphlink_command_palette_payload.py  graphlink_command_palette_web.py  graphlink_composer.py  graphlink_composer_bridge.py  graphlink_composer_context_bridge.py  graphlink_composer_context_payload.py  graphlink_composer_context_web.py  graphlink_composer_payload.py  graphlink_composer_picker_bridge.py  graphlink_composer_picker_payload.py  (+92 more)
web_ui/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+679 files in other folders)
